tests/builds/fail/child_struct_redclaring_parent.cpl
struct MyStruct {
	int argc;
	char **argv;
	float t;
};

struct YourStruct extends MyStruct{
	int c;
};

int main(int argc, char** argv) {
	return 0;
}
